🐛 fix(settings): settings component spacing fix.

--- a/packages/assets/css/src/scss/_components/_setting-block/_elements/_build-header.scss
+++ b/packages/assets/css/src/scss/_components/_setting-block/_elements/_build-header.scss
@@ -15,6 +15,13 @@
 		// Block wrapper.
 		@include block($block) {
 			@include element(header) {
+				display: flex;
+				gap: $spacing-lg;
+
+				@include media(max-width, sm) {
+					flex-direction: column;
+					align-items: flex-start;
+				}
 			}
 		}
 	}
