--- a/packages/assets/css/src/scss/_components/_setting-block/_modifiers/_state-fluid.scss
+++ b/packages/assets/css/src/scss/_components/_setting-block/_modifiers/_state-fluid.scss
@@ -15,7 +15,7 @@
 		@include block($block) {
 			@include modifier(fluid) {
 				flex-direction: column;
-				gap: 0;
+				gap: $spacing-lg;
 
 				.sui-#{$block}__header {
 					align-items: center;
